# AudiBachelorCompetition

./: CMakeLists.txt  SolutionPresentation.docx  main.cpp
bachelor_solution_src/: ElevationMap.cxx  ElevationMap.h  GeometricTools.cxx  GeometricTools.h  GeometricTools.txx  ShortestPathSolver.cxx  ShortestPathSolver.h
visualizer/: visualizer.cpp
